compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_string_binary_option_in_value.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 299
expression: "let x = <<<<1:1>>:binary>> x"

---
error: Invalid bit string segment
  ┌─ /src/one/two.gleam:1:19
  │
1 │ let x = <<<<1:1>>:binary>> x
  │                   ^^^^^^ This option is only allowed in BitString patterns.

Hint: This option has no effect in BitString values.
See: https://gleam.run/book/tour/bit-strings.html

